Src/Samples/MetaDslx.Languages.Soal/Syntax/InternalSyntax/SoalParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SoalParser.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MetaDslx.Languages.Soal.Syntax.InternalSyntax {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class SoalParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KNamespace=1, KEnum=2, KException=3, KStruct=4, KInterface=5, KThrows=6, 
		KOneway=7, KReturn=8, KBinding=9, KTransport=10, KEncoding=11, KProtocol=12, 
		KEndpoint=13, KAddress=14, KDatabase=15, KEntity=16, KAbstract=17, KComponent=18, 
		KComposite=19, KReference=20, KService=21, KWire=22, KTo=23, KImplementation=24, 
		KLanguage=25, KAssembly=26, KDeployment=27, KEnvironment=28, KRuntime=29, 
		KNull=30, KTrue=31, KFalse=32, KObject=33, KString=34, KInt=35, KLong=36, 
		KFloat=37, KDouble=38, KByte=39, KBool=40, KAny=41, KTypeof=42, KVoid=43, 
		TSemicolon=44, TColon=45, TDot=46, TComma=47, TAssign=48, TOpenParen=49, 
		TCloseParen=50, TOpenBracket=51, TCloseBracket=52, TOpenBrace=53, TCloseBrace=54, 
		TLessThan=55, TGreaterThan=56, TQuestion=57, TQuestionQuestion=58, TAmpersand=59, 
		THat=60, TBar=61, TAndAlso=62, TOrElse=63, TPlusPlus=64, TMinusMinus=65, 
		TPlus=66, TMinus=67, TTilde=68, TExclamation=69, TSlash=70, TAsterisk=71, 
		TPercent=72, TLessThanOrEqual=73, TGreaterThanOrEqual=74, TEqual=75, TNotEqual=76, 
		TAsteriskAssign=77, TSlashAssign=78, TPercentAssign=79, TPlusAssign=80, 
		TMinusAssign=81, TLeftShiftAssign=82, TRightShiftAssign=83, TAmpersandAssign=84, 
		THatAssign=85, TBarAssign=86, IDate=87, ITime=88, IDateTime=89, ITimeSpan=90, 
		IVersion=91, IStyle=92, IMTOM=93, ISSL=94, IHTTP=95, IREST=96, IWebSocket=97, 
		ISOAP=98, IXML=99, IJSON=100, IClientAuthentication=101, IWsAddressing=102, 
		IdentifierNormal=103, IdentifierVerbatim=104, LInteger=105, LDecimal=106, 
		LScientific=107, LDateTimeOffset=108, LDateTime=109, LDate=110, LTime=111, 
		LRegularString=112, LGuid=113, LUtf8Bom=114, LWhiteSpace=115, LCrLf=116, 
		LLineEnd=117, LSingleLineComment=118, LMultiLineComment=119, LDoubleQuoteVerbatimString=120, 
		LSingleQuoteVerbatimString=121, DoubleQuoteVerbatimStringLiteralStart=122, 
		SingleQuoteVerbatimStringLiteralStart=123, LCommentStart=124;
	public const int
		RULE_main = 0, RULE_name = 1, RULE_qualifiedName = 2, RULE_qualifier = 3, 
		RULE_identifierList = 4, RULE_qualifierList = 5, RULE_annotationList = 6, 
		RULE_returnAnnotationList = 7, RULE_annotation = 8, RULE_returnAnnotation = 9, 
		RULE_annotationHead = 10, RULE_annotationBody = 11, RULE_annotationPropertyList = 12, 
		RULE_annotationProperty = 13, RULE_annotationPropertyValue = 14, RULE_namespaceDeclaration = 15, 
		RULE_namespaceBody = 16, RULE_declaration = 17, RULE_enumDeclaration = 18, 
		RULE_enumBody = 19, RULE_enumLiterals = 20, RULE_enumLiteral = 21, RULE_structDeclaration = 22, 
		RULE_structBody = 23, RULE_propertyDeclaration = 24, RULE_databaseDeclaration = 25, 
		RULE_databaseBody = 26, RULE_entityReference = 27, RULE_interfaceDeclaration = 28, 
		RULE_interfaceBody = 29, RULE_operationDeclaration = 30, RULE_operationHead = 31, 
		RULE_parameterList = 32, RULE_parameter = 33, RULE_operationResult = 34, 
		RULE_componentDeclaration = 35, RULE_componentBody = 36, RULE_componentElements = 37, 
		RULE_componentElement = 38, RULE_componentService = 39, RULE_componentReference = 40, 
		RULE_componentServiceOrReferenceBody = 41, RULE_componentServiceOrReferenceElement = 42, 
		RULE_componentProperty = 43, RULE_componentImplementation = 44, RULE_componentLanguage = 45, 
		RULE_compositeDeclaration = 46, RULE_compositeBody = 47, RULE_assemblyDeclaration = 48, 
		RULE_compositeElements = 49, RULE_compositeElement = 50, RULE_compositeComponent = 51, 
		RULE_compositeWire = 52, RULE_wireSource = 53, RULE_wireTarget = 54, RULE_deploymentDeclaration = 55, 
		RULE_deploymentBody = 56, RULE_deploymentElements = 57, RULE_deploymentElement = 58, 
		RULE_environmentDeclaration = 59, RULE_environmentBody = 60, RULE_runtimeDeclaration = 61, 
		RULE_runtimeReference = 62, RULE_assemblyReference = 63, RULE_databaseReference = 64, 
		RULE_bindingDeclaration = 65, RULE_bindingBody = 66, RULE_bindingLayers = 67, 
		RULE_transportLayer = 68, RULE_httpTransportLayer = 69, RULE_httpTransportLayerBody = 70, 
		RULE_restTransportLayer = 71, RULE_restTransportLayerBody = 72, RULE_webSocketTransportLayer = 73, 
		RULE_webSocketTransportLayerBody = 74, RULE_httpTransportLayerProperties = 75, 
		RULE_httpSslProperty = 76, RULE_httpClientAuthenticationProperty = 77, 
		RULE_encodingLayer = 78, RULE_soapEncodingLayer = 79, RULE_soapEncodingLayerBody = 80, 
		RULE_xmlEncodingLayer = 81, RULE_xmlEncodingLayerBody = 82, RULE_jsonEncodingLayer = 83, 
		RULE_jsonEncodingLayerBody = 84, RULE_soapEncodingProperties = 85, RULE_soapVersionProperty = 86, 
		RULE_soapMtomProperty = 87, RULE_soapStyleProperty = 88, RULE_protocolLayer = 89, 
		RULE_protocolLayerKind = 90, RULE_wsAddressing = 91, RULE_endpointDeclaration = 92, 
		RULE_endpointBody = 93, RULE_endpointProperties = 94, RULE_endpointProperty = 95, 
		RULE_endpointBindingProperty = 96, RULE_endpointAddressProperty = 97, 
		RULE_returnType = 98, RULE_typeReference = 99, RULE_simpleType = 100, 
		RULE_nulledType = 101, RULE_referenceType = 102, RULE_objectType = 103, 
		RULE_valueType = 104, RULE_voidType = 105, RULE_onewayType = 106, RULE_operationReturnType = 107, 
		RULE_nullableType = 108, RULE_nonNullableType = 109, RULE_nonNullableArrayType = 110, 
		RULE_arrayType = 111, RULE_simpleArrayType = 112, RULE_nulledArrayType = 113, 
		RULE_constantValue = 114, RULE_typeofValue = 115, RULE_identifier = 116, 
		RULE_identifiers = 117, RULE_literal = 118, RULE_nullLiteral = 119, RULE_booleanLiteral = 120, 
		RULE_integerLiteral = 121, RULE_decimalLiteral = 122, RULE_scientificLiteral = 123, 
		RULE_stringLiteral = 124, RULE_contextualKeywords = 125;
	public static readonly string[] ruleNames = {
		"main", "name", "qualifiedName", "qualifier", "identifierList", "qualifierList", 
		"annotationList", "returnAnnotationList", "annotation", "returnAnnotation", 
		"annotationHead", "annotationBody", "annotationPropertyList", "annotationProperty", 
		"annotationPropertyValue", "namespaceDeclaration", "namespaceBody", "declaration", 
		"enumDeclaration", "enumBody", "enumLiterals", "enumLiteral", "structDeclaration", 
		"structBody", "propertyDeclaration", "databaseDeclaration", "databaseBody", 
		"entityReference", "interfaceDeclaration", "interfaceBody", "operationDeclaration", 
		"operationHead", "parameterList", "parameter", "operationResult", "componentDeclaration", 
		"componentBody", "componentElements", "componentElement", "componentService", 
		"componentReference", "componentServiceOrReferenceBody", "componentServiceOrReferenceElement", 
		"componentProperty", "componentImplementation", "componentLanguage", "compositeDeclaration", 
		"compositeBody", "assemblyDeclaration", "compositeElements", "compositeElement", 
		"compositeComponent", "compositeWire", "wireSource", "wireTarget", "deploymentDeclaration", 
		"deploymentBody", "deploymentElements", "deploymentElement", "environmentDeclaration", 
		"environmentBody", "runtimeDeclaration", "runtimeReference", "assemblyReference", 
		"databaseReference", "bindingDeclaration", "bindingBody", "bindingLayers", 
		"transportLayer", "httpTransportLayer", "httpTransportLayerBody", "restTransportLayer", 
		"restTransportLayerBody", "webSocketTransportLayer", "webSocketTransportLayerBody", 
		"httpTransportLayerProperties", "httpSslProperty", "httpClientAuthenticationProperty", 
		"encodingLayer", "soapEncodingLayer", "soapEncodingLayerBody", "xmlEncodingLayer", 
		"xmlEncodingLayerBody", "jsonEncodingLayer", "jsonEncodingLayerBody", 
		"soapEncodingProperties", "soapVersionProperty", "soapMtomProperty", "soapStyleProperty", 
		"protocolLayer", "protocolLayerKind", "wsAddressing", "endpointDeclaration", 
		"endpointBody", "endpointProperties", "endpointProperty", "endpointBindingProperty", 
		"endpointAddressProperty", "returnType", "typeReference", "simpleType", 
		"nulledType", "referenceType", "objectType", "valueType", "voidType", 
		"onewayType", "operationReturnType", "nullableType", "nonNullableType", 
		"nonNullableArrayType", "arrayType", "simpleArrayType", "nulledArrayType", 
		"constantValue", "typeofValue", "identifier", "identifiers", "literal", 
		"nullLiteral", "booleanLiteral", "integerLiteral", "decimalLiteral", "scientificLiteral", 
		"stringLiteral", "contextualKeywords"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'enum'", "'exception'", "'struct'", "'interface'", 
		"'throws'", "'oneway'", "'return'", "'binding'", "'transport'", "'encoding'", 
		"'protocol'", "'endpoint'", "'address'", "'database'", "'entity'", "'abstract'", 
		"'component'", "'composite'", "'reference'", "'service'", "'wire'", "'to'", 
		"'implementation'", "'language'", "'assembly'", "'deployment'", "'environment'", 
		"'runtime'", "'null'", "'true'", "'false'", "'object'", "'string'", "'int'", 
		"'long'", "'float'", "'double'", "'byte'", "'bool'", "'any'", "'typeof'", 
		"'void'", "';'", "':'", "'.'", "','", "'='", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'<'", "'>'", "'?'", "'??'", "'&'", "'^'", "'|'", "'&&'", 
		"'||'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'/'", null, "'%'", 
		"'<='", "'>='", "'=='", "'!='", "'*='", "'/='", "'%='", "'+='", "'-='", 
		"'<<='", "'>>='", "'&='", "'^='", "'|='", "'Date'", "'Time'", "'DateTime'", 
		"'TimeSpan'", "'Version'", "'Style'", "'MTOM'", "'SSL'", "'HTTP'", "'REST'", 
		"'WebSocket'", "'SOAP'", "'XML'", "'JSON'", "'ClientAuthentication'", 
		"'WsAddressing'", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "'\"'", "'''", "'@\"'", 
		"'@''", "'/*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KNamespace", "KEnum", "KException", "KStruct", "KInterface", "KThrows", 
		"KOneway", "KReturn", "KBinding", "KTransport", "KEncoding", "KProtocol", 
		"KEndpoint", "KAddress", "KDatabase", "KEntity", "KAbstract", "KComponent", 
		"KComposite", "KReference", "KService", "KWire", "KTo", "KImplementation", 
		"KLanguage", "KAssembly", "KDeployment", "KEnvironment", "KRuntime", "KNull", 
		"KTrue", "KFalse", "KObject", "KString", "KInt", "KLong", "KFloat", "KDouble", 
		"KByte", "KBool", "KAny", "KTypeof", "KVoid", "TSemicolon", "TColon", 
		"TDot", "TComma", "TAssign", "TOpenParen", "TCloseParen", "TOpenBracket", 
		"TCloseBracket", "TOpenBrace", "TCloseBrace", "TLessThan", "TGreaterThan", 
		"TQuestion", "TQuestionQuestion", "TAmpersand", "THat", "TBar", "TAndAlso", 
		"TOrElse", "TPlusPlus", "TMinusMinus", "TPlus", "TMinus", "TTilde", "TExclamation", 
		"TSlash", "TAsterisk", "TPercent", "TLessThanOrEqual", "TGreaterThanOrEqual", 
		"TEqual", "TNotEqual", "TAsteriskAssign", "TSlashAssign", "TPercentAssign", 
		"TPlusAssign", "TMinusAssign", "TLeftShiftAssign", "TRightShiftAssign", 
		"TAmpersandAssign", "THatAssign", "TBarAssign", "IDate", "ITime", "IDateTime", 
		"ITimeSpan", "IVersion", "IStyle", "IMTOM", "ISSL", "IHTTP", "IREST", 
		"IWebSocket", "ISOAP", "IXML", "IJSON", "IClientAuthentication", "IWsAddressing", 
		"IdentifierNormal", "IdentifierVerbatim", "LInteger", "LDecimal", "LScientific", 
		"LDateTimeOffset", "LDateTime", "LDate", "LTime", "LRegularString", "LGuid", 
		"LUtf8Bom", "LWhiteSpace", "LCrLf", "LLineEnd", "LSingleLineComment", 
		"LMultiLineComment", "LDoubleQuoteVerbatimString", "LSingleQuoteVerbatimString", 
		"DoubleQuoteVerbatimStringLiteralStart", "SingleQuoteVerbatimStringLiteralStart", 
		"LCommentStart"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SoalParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SoalParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SoalParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SoalParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class MainContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(SoalParser.Eof, 0); }
		public NamespaceDeclarationContext[] namespaceDeclaration() {
			return GetRuleContexts<NamespaceDeclarationContext>();
		}
		public NamespaceDeclarationContext namespaceDeclaration(int i) {
			return GetRuleContext<NamespaceDeclarationContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterMain(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitMain(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 255;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KNamespace || _la==TOpenBracket) {
				{
				{
				State = 252; namespaceDeclaration();
				}
				}
				State = 257;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 258; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NameContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public NameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NameContext name() {
		NameContext _localctx = new NameContext(Context, State);
		EnterRule(_localctx, 2, RULE_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 260; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedNameContext : ParserRuleContext {
		public QualifierContext qualifier() {
			return GetRuleContext<QualifierContext>(0);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedName; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterQualifiedName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitQualifiedName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifiedName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifiedNameContext qualifiedName() {
		QualifiedNameContext _localctx = new QualifiedNameContext(Context, State);
		EnterRule(_localctx, 4, RULE_qualifiedName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 262; qualifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifierContext : ParserRuleContext {
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public ITerminalNode[] TDot() { return GetTokens(SoalParser.TDot); }
		public ITerminalNode TDot(int i) {
			return GetToken(SoalParser.TDot, i);
		}
		public QualifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.EnterQualifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISoalParserListener typedListener = listener as ISoalParserListener;
			if (typedListener != null) typedListener.ExitQualifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISoalParserVisitor<TResult> typedVisitor = visitor as ISoalParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQualifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QualifierContext qualifier() {
		QualifierContext _localctx = new QualifierContext(Context, State);
		EnterRule(_localctx, 6, RULE_qualifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 264; identifier();
			State = 269;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TDot) {
				{
				{
				State = 265; Match(TDot);
				State = 266; identifier();
				}
				}
				State = 271;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
